# ytreza_dev

./: .env.template  .env.test  .gitignore  README.md  TODO.md  mypy.ini  pyproject.toml
data_test/: README.md  task_repository.json
src/ytreza_dev/: main.py
src/ytreza_dev/features/final_version_perfected/: close_task_use_case.py  controller.py  injection_keys.py  types.py
src/ytreza_dev/features/start_fvp_use_case/: task_repository_from_json.py  todolist_reader_from_todoist.py  use_case.py
src/ytreza_dev/features/todolist_query/: todoist_adapter.py  todolist_query.py  todolist_reader_from_todoist.py
src/ytreza_dev/features/todolist_query_fvp/: next_action_fvp_query.py  task_reader_from_json.py  types.py
src/ytreza_dev/shared/: env_reader.py
src/ytreza_dev/streamlit/: main.py  todolist_page.py
tests/features/choose_task_fvp/: test_choose_task_use_case.py
tests/features/final_version_perfected/: adapters.py  fixtures.py  ta_fvp.py  test_choose_task_use_case.py  test_start_fvp_use_case.py  ti_task_reader_from_json.py  ti_todolist_reader_from_todoist.py  ti_todolist_repository_from_json.py  ti_todolist_repository_from_json.test_write_in_json.approved.txt  tu_close_task_use_case.py  tu_list_fvp_next_action.py
tests/features/inbox_zero/: tu_read_next_mail.py
tests/features/start_fvp_use_case/: test_start_fvp_use_case.py  ti_todolist_reader_from_todoist.py  ti_todolist_repository_from_json.py
tests/features/todolist_fvp_query/: ti_task_reader_from_json.py  tu_list_fvp_next_action.py
tests/features/todolist_query/: test_list_all_tasks_from_todolist.py  ti_todoist_adapter.py  ti_todolist_reader_from_todoist.py  tu_list_all_tasks_from_todolist.py
tests/shared/: test_project_builder.py  test_task_builder.py
tests/shared/todoist/: ti_all_tasks.py  ti_all_tasks.test_all_tasks.approved.txt
tests/test_acceptation/fvp/: ta_fvp.py
tests/test_end_to_end/: test_fvp.py
(+45 files in other folders)
