[project]
name = "ytreza-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "pyqure @ git+https://github.com/Johjo/pyqure.git",
    "types-toml (>=0.10.8.20240310,<0.11.0.0)",
    "expression (>=5.6.0,<6.0.0)",
    "approvaltests>=15.3.2",
]

[tool.poetry]
packages = [{include = "ytreza_dev", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4"

[tool.poetry.group.dev.dependencies]
approvaltests = "^15.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tu_*.py",
    "ti_*.py",
    "ta_*.py",
]
markers=[
    "integration",
    "acceptance"
]

